# e-hbot

./: .env  Cargo.toml  tags.json
src/: main.rs
src/commands/: config.rs  ehsearcher.rs  embeds.rs  info.rs  mod.rs  searches.rs
