[package]
name = "e-hbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", features = ["cache", "framework", "standard_framework", "rustls_backend"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.23"
tracing-subscriber = "0.2"
dotenv = "0.15"
scraper = "0.14.0"
reqwest = { version = "0.11.14", features = ["json"] }
lazy_static = "1.4.0"
nom = "7.1.3"
serde = { version = "1.0.153", features = ["derive"] }
serde_json = "1.0.94"
chrono = "0.4.23"
